# ADMP-LS

./: .gitattributes  Dockerfile  README.md  docker-compose.yml
client/: .env-example.txt  Dockerfile  README.md  app.py  config.py  requirements.txt  run.sh  servers_config.json
client/.streamlit/: config.toml
client/apps/: mcp_playground.py
client/chat_history/: chat_Bio_QA_mcp_agent_20250908_122027.json  chat_Review_mcp_agent_20250908_121128.json
client/docs/: import_export_guide.md  logging_config.md
client/services/: ai_service.py  chat_service.py  export_service.py  import_service.py  logging_service.py  mcp_service.py  task_monitor.py
client/ui_components/: log_viewer.py  sidebar_components.py
client/utils/: ai_prompts.py
servers/Retrieve/: .gitignore  Dockerfile  env_example.txt  main.py  readme.md  requirements.txt  run.sh
servers/Retrieve/bio_agent/: rewrite_agent.py
servers/Retrieve/bio_requests/: chat_request.py  rag_request.py
servers/Retrieve/config/: 2023JCR（完整）.xlsx  app_config_dev.yaml  (+1 more)
servers/Review/: Dockerfile  __init__.py  app.py  build_image.py  config_logger.py  env_example.txt  iterative_detail_plan.py  iterative_research.py  launch.sh  long_review_write.py  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  setting_config.py  util.py
servers/Review/tools/: detail_plan_agent.py  knowledge_gap_agent.py  long_writer_agent.py  pubmed_search_agent.py  search_tool.py  thinking_agent.py  tool_selector_agent.py  writer_agent.py
servers/Review/utils/: baseclass.py  llm_client.py  parse_output.py  schemas.py
(+13 files in other folders)
